# ddd-dpd-data

./: .gitignore  README.md  pyproject.toml
chats/processed/: chat_ratings_2026-01-27_0.json  chat_ratings_2026-01-27_1.json  chat_ratings_2026-01-29_0.json  chat_ratings_2026-01-29_1.json  chat_ratings_2026-01-29_2.json  chat_ratings_2026-02-10_0.json  chat_ratings_2026-02-10_1.json  chat_ratings_2026-02-10_2.json  chat_ratings_2026-02-17_0.json  chat_ratings_2026-02-17_1.json  chat_ratings_2026-02-17_2.json  chat_ratings_2026-02-19_0.json  chat_ratings_2026-02-19_1.json  chat_ratings_2026-03-03_0.json  chat_ratings_2026-03-03_1.json  chat_ratings_2026-03-03_2.json  chat_ratings_2026-03-05_0.json  chat_ratings_2026-03-05_1.json  chat_ratings_2531800655.json  chat_ratings_2532692097.json  chat_ratings_2537298542.json  chat_ratings_2538156114.json  chat_ratings_2550289929.json  chat_ratings_2551145148.json  chat_ratings_2567934520.json  chat_ratings_2568748467.json  chat_ratings_2579678390.json  chat_ratings_2580498127.json  chat_ratings_2591689945.json  chat_ratings_2592528579.json  chat_ratings_2597045415.json  chat_ratings_2597046349.json  chat_ratings_2597648683.json  chat_ratings_2604462272.json  chat_ratings_2610474912.json  chat_ratings_2622619598.json  (+5 more)
data/: README.md  bewertungen.csv  bewertungen_dictionary.csv  streams.csv
scripts/: add_new_week.py  cluster_chat_ratings.py  cluster_ratings.py  dinner_search.py  dinner_suche.py  extract_ratings.py  parse_week.py  woche_parsen.py
src/: cluster_chat_ratings.py  ddd.py  extract_ratings_from_chat.py  loader.py
(+4 files in other folders)
